QL: correction in the z-index of the categories select in the header

--- a/src/components/shared/common/header/header.module.css
+++ b/src/components/shared/common/header/header.module.css
@@ -91,6 +91,7 @@
 .optionsContainer {
   position: absolute;
   top: 102px;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   width: 164px;
